--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -9,6 +9,9 @@
 			<trans-unit id="tx_tweprivacy_domain_model_type.title">
 				<source>Title</source>
 			</trans-unit>
+			<trans-unit id="tx_tweprivacy_domain_model_type.description">
+				<source>Description</source>
+			</trans-unit>
 			<trans-unit id="tx_tweprivacy_domain_model_type.needs_consent">
 				<source>Needs Consent</source>
 			</trans-unit>
@@ -31,10 +34,10 @@
 				<source>Type</source>
 			</trans-unit>
 			<trans-unit id="tx_tw_eprivacy_eprivacy.name">
-				<source>ePrivacy</source>
+				<source>ePrivacy Consent Manager</source>
 			</trans-unit>
 			<trans-unit id="tx_tw_eprivacy_eprivacy.description">
-				<source>ePrivacy Consent</source>
+				<source>Form listing registered ePrivacy subjects including a way to give or withdraw consent to each of them.</source>
 			</trans-unit>
 		</body>
 	</file>
