Finish consent cookie handling

--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -3,6 +3,27 @@
 	<file source-language="en" datatype="plaintext" original="messages" date="2020-02-14T09:08:30Z" product-name="tw_eprivacy">
 		<header/>
 		<body>
+			<trans-unit id="common">
+				<source>Common Settings</source>
+			</trans-unit>
+			<trans-unit id="cookie">
+				<source>Consent Cookie</source>
+			</trans-unit>
+			<trans-unit id="cookie.lifetime">
+				<source>Consent Lifetime (seconds)</source>
+			</trans-unit>
+			<trans-unit id="cookie.path">
+				<source>Cookie Path</source>
+			</trans-unit>
+			<trans-unit id="cookie.domain">
+				<source>Cookie Domain</source>
+			</trans-unit>
+			<trans-unit id="cookie.secure">
+				<source>Secure Cookie</source>
+			</trans-unit>
+			<trans-unit id="cookie.httponly">
+				<source>HTTP-Only Cookie</source>
+			</trans-unit>
 			<trans-unit id="tx_tweprivacy_domain_model_type">
 				<source>ePrivacy Subject Type</source>
 			</trans-unit>
