--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -3,26 +3,17 @@
 	<file source-language="en" datatype="plaintext" original="messages" date="2020-02-14T09:08:30Z" product-name="tw_eprivacy">
 		<header/>
 		<body>
-			<trans-unit id="tx_tweprivacy_domain_model_type">
-				<source>Type</source>
+			<trans-unit id="eprivacy.update.update">
+				<source>Update settings</source>
 			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_type.title">
-				<source>Title</source>
+			<trans-unit id="eprivacy.update.accept">
+				<source>Accept all</source>
 			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject">
-				<source>Subject</source>
+			<trans-unit id="eprivacy.update.deny">
+				<source>Deny all</source>
 			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.title">
-				<source>Title</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.identifier">
-				<source>Identifier</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.description">
-				<source>Description</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.type">
-				<source>Type</source>
+			<trans-unit id="eprivacy.update.reset">
+				<source>Reset</source>
 			</trans-unit>
 		</body>
 	</file>
