--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -3,6 +3,18 @@
 	<file source-language="en" datatype="plaintext" original="messages" date="2020-02-14T09:08:30Z" product-name="tw_eprivacy">
 		<header/>
 		<body>
+			<trans-unit id="eprivacy.subject.name">
+				<source>Name</source>
+			</trans-unit>
+			<trans-unit id="eprivacy.subject.provider">
+				<source>Provider</source>
+			</trans-unit>
+			<trans-unit id="eprivacy.subject.purpose">
+				<source>Purpose</source>
+			</trans-unit>
+			<trans-unit id="eprivacy.subject.lifetime">
+				<source>Lifetime</source>
+			</trans-unit>
 			<trans-unit id="eprivacy.update.update">
 				<source>Update settings</source>
 			</trans-unit>
