--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -1,77 +1,86 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2020-02-14T09:08:30Z" product-name="tw_eprivacy">
-		<header/>
-		<body>
-			<trans-unit id="common">
-				<source>Common Settings</source>
-			</trans-unit>
-			<trans-unit id="cookie">
-				<source>Consent Cookie</source>
-			</trans-unit>
-			<trans-unit id="cookie.lifetime">
-				<source>Consent Lifetime (seconds)</source>
-			</trans-unit>
-			<trans-unit id="cookie.path">
-				<source>Cookie Path</source>
-			</trans-unit>
-			<trans-unit id="cookie.domain">
-				<source>Cookie Domain</source>
-			</trans-unit>
-			<trans-unit id="cookie.secure">
-				<source>Secure Cookie</source>
-			</trans-unit>
-			<trans-unit id="cookie.httponly">
-				<source>HTTP-Only Cookie</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_type">
-				<source>ePrivacy Subject Type</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_type.title">
-				<source>Title</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_type.description">
-				<source>Description</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_type.needs_consent">
-				<source>Needs Consent</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject">
-				<source>ePrivacy Subject</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.title">
-				<source>Title</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.name">
-				<source>Public Name</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.identifier">
-				<source>Identifier</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.provider">
-				<source>Provider</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.purpose">
-				<source>Purpose</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.type">
-				<source>Type</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.lifetime">
-				<source>Lifetime (seconds)</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.public">
-				<source>Public</source>
-			</trans-unit>
-			<trans-unit id="tx_tweprivacy_domain_model_subject.session">
-				<source>Expires with session</source>
-			</trans-unit>
-			<trans-unit id="tx_tw_eprivacy_eprivacy.name">
-				<source>ePrivacy Consent Manager</source>
-			</trans-unit>
-			<trans-unit id="tx_tw_eprivacy_eprivacy.description">
-				<source>Form listing registered ePrivacy subjects including a way to give or withdraw consent to each of them.</source>
-			</trans-unit>
-		</body>
-	</file>
+    <file source-language="en" datatype="plaintext" original="messages" date="2020-02-14T09:08:30Z"
+          product-name="tw_eprivacy">
+        <header/>
+        <body>
+            <trans-unit id="common">
+                <source>Common Settings</source>
+            </trans-unit>
+            <trans-unit id="common.imprint">
+                <source>Imprint Page (ID)</source>
+            </trans-unit>
+            <trans-unit id="common.privacy">
+                <source>Privacy Policy Page (ID)</source>
+            </trans-unit>
+            <trans-unit id="cookie">
+                <source>Consent Cookie</source>
+            </trans-unit>
+            <trans-unit id="cookie.lifetime">
+                <source>Consent Lifetime (seconds)</source>
+            </trans-unit>
+            <trans-unit id="cookie.path">
+                <source>Cookie Path</source>
+            </trans-unit>
+            <trans-unit id="cookie.domain">
+                <source>Cookie Domain</source>
+            </trans-unit>
+            <trans-unit id="cookie.secure">
+                <source>Secure Cookie</source>
+            </trans-unit>
+            <trans-unit id="cookie.httponly">
+                <source>HTTP-Only Cookie</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_type">
+                <source>ePrivacy Subject Type</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_type.title">
+                <source>Title</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_type.description">
+                <source>Description</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_type.needs_consent">
+                <source>Needs Consent</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject">
+                <source>ePrivacy Subject</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.title">
+                <source>Title</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.name">
+                <source>Public Name</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.identifier">
+                <source>Identifier</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.provider">
+                <source>Provider</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.purpose">
+                <source>Purpose</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.type">
+                <source>Type</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.lifetime">
+                <source>Lifetime (seconds)</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.public">
+                <source>Public</source>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.session">
+                <source>Expires with session</source>
+            </trans-unit>
+            <trans-unit id="tx_tw_eprivacy_eprivacy.name">
+                <source>ePrivacy Consent Manager</source>
+            </trans-unit>
+            <trans-unit id="tx_tw_eprivacy_eprivacy.description">
+                <source>Form listing registered ePrivacy subjects including a way to give or withdraw consent to each of
+                    them.
+                </source>
+            </trans-unit>
+        </body>
+    </file>
 </xliff>
