--- a/Resources/Private/Language/it.locallang.xlf
+++ b/Resources/Private/Language/it.locallang.xlf
@@ -1,11 +1,10 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<?xml version='1.0' encoding='utf-8'?>
 <xliff version="1.0">
 	<file source-language="en" datatype="plaintext" original="messages" date="2020-02-14T09:08:30Z" product-name="tw_eprivacy">
 		<header/>
 		<body>
 			<trans-unit id="eprivacy.subject.name">
-				<source>Cookie Name</source>
-			</trans-unit>
+				<source>Cookie Name</source> <target></target></trans-unit>
 			<trans-unit id="eprivacy.subject.provider">
 				<source>Provider</source>
 			</trans-unit>
