--- a/Resources/Private/Language/es.locallang_db.xlf
+++ b/Resources/Private/Language/es.locallang_db.xlf
@@ -3,94 +3,64 @@
     <file source-language="en" datatype="plaintext" original="messages" date="2020-02-14T09:08:30Z" product-name="tw_eprivacy">
         <header/>
         <body>
-            <trans-unit id="common">
-                <source>Common Settings</source> <target></target></trans-unit>
-            <trans-unit id="common.imprint">
-                <source>Imprint Page (ID)</source>
-            </trans-unit>
-            <trans-unit id="common.privacy">
-                <source>Privacy Policy Page (ID)</source>
-            </trans-unit>
-            <trans-unit id="cookie">
-                <source>Consent Cookie</source>
-            </trans-unit>
-            <trans-unit id="cookie.lifetime">
-                <source>Consent Lifetime (seconds)</source>
-            </trans-unit>
-            <trans-unit id="cookie.path">
-                <source>Cookie Path</source>
-            </trans-unit>
-            <trans-unit id="cookie.domain">
-                <source>Cookie Domain</source>
-            </trans-unit>
-            <trans-unit id="cookie.secure">
-                <source>Secure Cookie</source>
-            </trans-unit>
-            <trans-unit id="cookie.httponly">
-                <source>HTTP-Only Cookie</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_type">
-                <source>ePrivacy Subject Type</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_type.title">
-                <source>Title</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_type.description">
-                <source>Description</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_type.needs_consent">
-                <source>Needs Consent</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject">
-                <source>ePrivacy Subject</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.title">
-                <source>Title</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.name">
-                <source>Public Name</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.identifier">
-                <source>Identifier</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.provider">
-                <source>Provider</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.purpose">
-                <source>Purpose</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.type">
-                <source>Type</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.mode">
-                <source>Mode</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.mode.cookie">
-                <source>Cookie</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.mode.set">
-                <source>Set</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.parent_set">
-                <source>Belongs to set</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.lifetime">
-                <source>Lifetime (seconds)</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.public">
-                <source>Public</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.session">
-                <source>Expires with session</source>
-            </trans-unit>
-            <trans-unit id="tx_tw_eprivacy_eprivacy.name">
-                <source>ePrivacy Consent Manager</source>
-            </trans-unit>
-            <trans-unit id="tx_tw_eprivacy_eprivacy.description">
-                <source>Form listing registered ePrivacy subjects including a way to give or withdraw consent to each of
-                    them.
-                </source>
-            </trans-unit>
+            <trans-unit id="common" approved="yes">
+                <source>Common Settings</source> <target state="translated">Configuración común</target></trans-unit>
+            <trans-unit id="common.imprint" approved="yes">
+                <source>Imprint Page (ID)</source> <target state="translated">Página Impresión (ID)</target></trans-unit>
+            <trans-unit id="common.privacy" approved="yes">
+                <source>Privacy Policy Page (ID)</source> <target state="translated">Página Política de Privacidad (ID)</target></trans-unit>
+            <trans-unit id="cookie" approved="yes">
+                <source>Consent Cookie</source> <target state="translated">Cookie de consentimiento</target></trans-unit>
+            <trans-unit id="cookie.lifetime" approved="yes">
+                <source>Consent Lifetime (seconds)</source> <target state="translated">Duración de consentimiento (segundos)</target></trans-unit>
+            <trans-unit id="cookie.path" approved="yes">
+                <source>Cookie Path</source> <target state="translated">Ruta de acceso de la cookie</target></trans-unit>
+            <trans-unit id="cookie.domain" approved="yes">
+                <source>Cookie Domain</source> <target state="translated">Dominio de cookie</target></trans-unit>
+            <trans-unit id="cookie.secure" approved="yes">
+                <source>Secure Cookie</source> <target state="translated">Cookie de seguridad</target></trans-unit>
+            <trans-unit id="cookie.httponly" approved="yes">
+                <source>HTTP-Only Cookie</source> <target state="translated">Cookie HTTP-Only</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_type" approved="yes">
+                <source>ePrivacy Subject Type</source> <target state="translated">Tipo de asunto ePrivacy</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_type.title" approved="yes">
+                <source>Title</source> <target state="translated">Título</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_type.description" approved="yes">
+                <source>Description</source> <target state="translated">Descripción</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_type.needs_consent" approved="yes">
+                <source>Needs Consent</source> <target state="translated">Requiere consentimiento</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject" approved="yes">
+                <source>ePrivacy Subject</source> <target state="translated">Asunto ePrivacy</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.title" approved="yes">
+                <source>Title</source> <target state="translated">Título</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.name" approved="yes">
+                <source>Public Name</source> <target state="translated">Nombre público</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.identifier" approved="yes">
+                <source>Identifier</source> <target state="translated">Identificador</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.provider" approved="yes">
+                <source>Provider</source> <target state="translated">Proveedor</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.purpose" approved="yes">
+                <source>Purpose</source> <target state="translated">Finalidad</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.type" approved="yes">
+                <source>Type</source> <target state="translated">Tipo</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.mode" approved="yes">
+                <source>Mode</source> <target state="translated">Modo</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.mode.cookie" approved="yes">
+                <source>Cookie</source> <target state="translated">Cookie</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.mode.set" approved="yes">
+                <source>Set</source> <target state="translated">Conjunto</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.parent_set" approved="yes">
+                <source>Belongs to set</source> <target state="translated">Pertenece a conjunto</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.lifetime" approved="yes">
+                <source>Lifetime (seconds)</source> <target state="translated">Duración (segundos)</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.public" approved="yes">
+                <source>Public</source> <target state="translated">Nombre público</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.session" approved="yes">
+                <source>Expires with session</source> <target state="translated">Expira con la sesión</target></trans-unit>
+            <trans-unit id="tx_tw_eprivacy_eprivacy.name" approved="yes">
+                <source>ePrivacy Consent Manager</source> <target state="translated">Administrador de consentimiento ePrivacy</target></trans-unit>
+            <trans-unit id="tx_tw_eprivacy_eprivacy.description" approved="yes">
+                <source>Form listing registered ePrivacy subjects including a way to give or withdraw consent to each of them.</source> <target state="translated">Formulario registrado de asuntos ePrivacy incluida una forma para dar o retirar el consentimiento a cada uno de ellos.</target></trans-unit>
         </body>
     </file>
 </xliff>
