--- a/Resources/Private/Language/fr.locallang_db.xlf
+++ b/Resources/Private/Language/fr.locallang_db.xlf
@@ -1,96 +1,79 @@
 <?xml version='1.0' encoding='utf-8'?>
 <xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="messages" date="2020-02-14T09:08:30Z" product-name="tw_eprivacy">
+    <file source-language="en" datatype="plaintext" original="messages" date="2020-02-14T09:08:30Z" product-name="tw_eprivacy" target-language="fr">
         <header/>
         <body>
-            <trans-unit id="common">
-                <source>Common Settings</source> <target></target></trans-unit>
-            <trans-unit id="common.imprint">
-                <source>Imprint Page (ID)</source>
-            </trans-unit>
-            <trans-unit id="common.privacy">
-                <source>Privacy Policy Page (ID)</source>
-            </trans-unit>
-            <trans-unit id="cookie">
-                <source>Consent Cookie</source>
-            </trans-unit>
-            <trans-unit id="cookie.lifetime">
-                <source>Consent Lifetime (seconds)</source>
-            </trans-unit>
-            <trans-unit id="cookie.path">
-                <source>Cookie Path</source>
-            </trans-unit>
-            <trans-unit id="cookie.domain">
-                <source>Cookie Domain</source>
-            </trans-unit>
-            <trans-unit id="cookie.secure">
-                <source>Secure Cookie</source>
-            </trans-unit>
-            <trans-unit id="cookie.httponly">
-                <source>HTTP-Only Cookie</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_type">
-                <source>ePrivacy Subject Type</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_type.title">
-                <source>Title</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_type.description">
-                <source>Description</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_type.needs_consent">
-                <source>Needs Consent</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject">
-                <source>ePrivacy Subject</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.title">
-                <source>Title</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.name">
-                <source>Public Name</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.identifier">
-                <source>Identifier</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.provider">
-                <source>Provider</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.purpose">
-                <source>Purpose</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.type">
-                <source>Type</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.mode">
-                <source>Mode</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.mode.cookie">
-                <source>Cookie</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.mode.set">
-                <source>Set</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.parent_set">
-                <source>Belongs to set</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.lifetime">
-                <source>Lifetime (seconds)</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.public">
-                <source>Public</source>
-            </trans-unit>
-            <trans-unit id="tx_tweprivacy_domain_model_subject.session">
-                <source>Expires with session</source>
-            </trans-unit>
-            <trans-unit id="tx_tw_eprivacy_eprivacy.name">
-                <source>ePrivacy Consent Manager</source>
-            </trans-unit>
-            <trans-unit id="tx_tw_eprivacy_eprivacy.description">
-                <source>Form listing registered ePrivacy subjects including a way to give or withdraw consent to each of
-                    them.
-                </source>
-            </trans-unit>
+            <trans-unit id="common" approved="yes">
+                <source>Common Settings</source> <target state="translated">Paramètres communs</target></trans-unit>
+            <trans-unit id="common.imprint" approved="yes">
+                <source>Imprint Page (ID)</source> <target state="translated">Page Mentions légales (ID)</target></trans-unit>
+            <trans-unit id="common.privacy" approved="yes">
+                <source>Privacy Policy Page (ID)</source> <target state="translated">Page Politique de confidentialité (ID)</target></trans-unit>
+            <trans-unit id="cookie" approved="yes">
+                <source>Consent Cookie</source> <target state="translated">Cookie de consentement</target></trans-unit>
+            <trans-unit id="cookie.lifetime" approved="yes">
+                <source>Consent Lifetime (seconds)</source> <target state="translated">Durée de vie du consentement (secondes)</target></trans-unit>
+            <trans-unit id="cookie.path" approved="yes">
+                <source>Cookie Path</source> <target state="translated">Chemin du cookie</target></trans-unit>
+            <trans-unit id="cookie.domain" approved="yes">
+                <source>Cookie Domain</source> <target state="translated">Domaine du cookie</target></trans-unit>
+            <trans-unit id="cookie.secure" approved="yes">
+                <source>Secure Cookie</source> <target state="translated">Cookie sécurisé</target></trans-unit>
+            <trans-unit id="cookie.httponly" approved="yes">
+                <source>HTTP-Only Cookie</source> <target state="translated">Cookie limité aux sessions HTTP</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_type" approved="yes">
+                <source>ePrivacy Subject Type</source> <target state="translated">Type de sujet ePrivacy</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_type.title" approved="yes">
+                <source>Title</source> <target state="translated">Titre</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_type.description" approved="yes">
+                <source>Description</source> <target state="translated">Description</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_type.needs_consent" approved="yes">
+                <source>Needs Consent</source> <target state="translated">Requiert le consentement</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject" approved="yes">
+                <source>ePrivacy Subject</source> <target state="translated">Sujet ePrivacy</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.title" approved="yes">
+                <source>Title</source> <target state="translated">Titre</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.name" approved="yes">
+                <source>Public Name</source> <target state="translated">Nom public</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.identifier" approved="yes">
+                <source>Identifier</source> <target state="translated">Identifiant
+</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.provider" approved="yes">
+                <source>Provider</source> <target state="translated">Prestataire
+</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.purpose" approved="yes">
+                <source>Purpose</source> <target state="translated">Motif
+</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.type" approved="yes">
+                <source>Type</source> <target state="translated">Type
+</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.mode" approved="yes">
+                <source>Mode</source> <target state="translated">Mode
+</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.mode.cookie" approved="yes">
+                <source>Cookie</source> <target state="translated">Cookie
+</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.mode.set" approved="yes">
+                <source>Set</source> <target state="translated">Set
+</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.parent_set" approved="yes">
+                <source>Belongs to set</source> <target state="translated">Fait partie du set
+</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.lifetime" approved="yes">
+                <source>Lifetime (seconds)</source> <target state="translated">Durée de vie (secondes)
+</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.public" approved="yes">
+                <source>Public</source> <target state="translated">Nom public
+</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.session" approved="yes">
+                <source>Expires with session</source> <target state="translated">Expire avec la session
+</target></trans-unit>
+            <trans-unit id="tx_tw_eprivacy_eprivacy.name" approved="yes">
+                <source>ePrivacy Consent Manager</source> <target state="translated">Gestionnaire du consentement ePrivacy
+</target></trans-unit>
+            <trans-unit id="tx_tw_eprivacy_eprivacy.description" approved="yes">
+                <source>Form listing registered ePrivacy subjects including a way to give or withdraw consent to each of them.</source> <target state="translated">Formulaire avec liste des sujets ePrivacy enregistrés, incluant un moyen de donner ou de retirer son consentement pour chacun d'eux
+</target></trans-unit>
         </body>
     </file>
 </xliff>
