--- a/Resources/Private/Language/en.locallang.xlf
+++ b/Resources/Private/Language/en.locallang.xlf
@@ -19,6 +19,21 @@
 				<source>Accept all</source> <target state="translated">Accept all</target></trans-unit>
 			<trans-unit id="eprivacy.update.deny" approved="yes">
 				<source>Accept necessary only</source> <target state="translated">Accept necessary only</target></trans-unit>
+
+			<trans-unit id="eprivacy.dialog.title">
+				<source>Cookie usage on this site</source>
+				<target></target>
+			</trans-unit>
+			<trans-unit id="eprivacy.dialog.description">
+				<source>This website uses cookies to ensure you get the best experience on our website. By continuing to use this site, you agree to our use of cookies. For more information, please see our <![CDATA[<a href="%s">]]>imprint<![CDATA[<a/>]]> and our <![CDATA[<a href="%s">]]>privacy policy<![CDATA[<a/>]]>.</source>
+				<target></target>
+			</trans-unit>
+			<trans-unit id="eprivacy.dialog.learn-more">
+				<source>Learn more</source>
+				<target></target>
+			</trans-unit>
+
+
 			<trans-unit id="eprivacy.update.reset" approved="yes">
 				<source>Reset</source> <target state="translated">Reset</target></trans-unit>
 			<trans-unit id="content.needsConsent.text">
