--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -16,6 +16,10 @@
             <trans-unit id="common.pluginPid">
                 <source>Plugin Page (ID)</source>
             </trans-unit>
+            <trans-unit id="common.showDialog">
+                <source>Show cookie dialog</source>
+                <target></target>
+            </trans-unit>
             <trans-unit id="cookie">
                 <source>Consent Cookie</source>
             </trans-unit>
