--- a/Resources/Private/Language/fr.locallang_db.xlf
+++ b/Resources/Private/Language/fr.locallang_db.xlf
@@ -52,8 +52,10 @@
                 <source>Provider</source> <target state="translated">Prestataire
 </target></trans-unit>
             <trans-unit id="tx_tweprivacy_domain_model_subject.purpose" approved="yes">
-                <source>Purpose</source> <target state="translated">Motif
+                <source>Purpose</source> <target state="translated">Objectif
 </target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.purpose_short" approved="yes">
+                <source>Purpose Short Description</source> <target>Objectif Brève description</target></trans-unit>
             <trans-unit id="tx_tweprivacy_domain_model_subject.type" approved="yes">
                 <source>Type</source> <target state="translated">Type
 </target></trans-unit>
