--- a/Resources/Private/Language/it.locallang_db.xlf
+++ b/Resources/Private/Language/it.locallang_db.xlf
@@ -69,6 +69,8 @@
             <trans-unit id="tx_tweprivacy_domain_model_subject.purpose" approved="yes">
                 <source>Purpose</source> <target state="translated">Scopo
 </target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.purpose_short" approved="yes">
+                <source>Purpose Short Description</source> <target>Scopo Breve descrizione</target></trans-unit>
             <trans-unit id="tx_tweprivacy_domain_model_subject.type" approved="yes">
                 <source>Type</source> <target state="translated">Tipo
 </target></trans-unit>
