--- a/Resources/Private/Language/es.locallang_db.xlf
+++ b/Resources/Private/Language/es.locallang_db.xlf
@@ -51,6 +51,8 @@
                 <source>Provider</source> <target state="translated">Proveedor</target></trans-unit>
             <trans-unit id="tx_tweprivacy_domain_model_subject.purpose" approved="yes">
                 <source>Purpose</source> <target state="translated">Finalidad</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.purpose_short" approved="yes">
+                <source>Purpose Short Description</source> <target>Finalidad Breve descripción</target></trans-unit>
             <trans-unit id="tx_tweprivacy_domain_model_subject.type" approved="yes">
                 <source>Type</source> <target state="translated">Tipo</target></trans-unit>
             <trans-unit id="tx_tweprivacy_domain_model_subject.mode" approved="yes">
