--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -68,6 +68,9 @@
             <trans-unit id="tx_tweprivacy_domain_model_subject.purpose">
                 <source>Purpose</source>
             </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.purpose_short">
+                <source>Purpose Short Description</source>
+            </trans-unit>
             <trans-unit id="tx_tweprivacy_domain_model_subject.type">
                 <source>Type</source>
             </trans-unit>
