--- a/Resources/Private/Language/en.locallang.xlf
+++ b/Resources/Private/Language/en.locallang.xlf
@@ -36,13 +36,21 @@
 
 			<trans-unit id="eprivacy.update.reset" approved="yes">
 				<source>Reset</source> <target state="translated">Reset</target></trans-unit>
-			<trans-unit id="content.needsConsent.text">
-				<source>A content was hidden because you did not agree to all necessary cookies. In order to see the content, you must agree to the following cookies.</source>
+			<trans-unit id="content.needsConsent.description">
+				<source>The content "%s" was hidden because you did not agree to all necessary cookies. In order to see the content, you must agree to the following cookies.</source>
 				<target>The content "%s" was hidden because you did not agree to all necessary cookies. In order to see the content, you must agree to the following cookies.</target>
 			</trans-unit>
-			<trans-unit id="content.needsConsent.actions">
-				<source>Click <![CDATA[<a href="%s">here</a>]]> to show the content, accepting all required cookies. You can manage all of your settings on <![CDATA[<a href="%s">this page</a>]]>.</source>
-				<target>Click <![CDATA[<a href="%s">here</a>]]> to show the content, accepting all required cookies. You can manage all of your settings on <![CDATA[<a href="%s">this page</a>]]>.</target>
+			<trans-unit id="content.needsConsent.link.accept">
+				<source>Show content and accept required cookies</source>
+				<target>Show content and accept required cookies</target>
+			</trans-unit>
+			<trans-unit id="content.needsConsent.link.settings">
+				<source>Manage all cookie settings</source>
+				<target>Manage all cookie settings</target>
+			</trans-unit>
+			<trans-unit id="content.needsConsent.cookie.title">
+				<source>%s:</source>
+				<target>%s:</target>
 			</trans-unit>
 		</body>
 	</file>
