--- a/Resources/Private/Language/es.locallang.xlf
+++ b/Resources/Private/Language/es.locallang.xlf
@@ -35,13 +35,21 @@
 
 			<trans-unit id="eprivacy.update.reset" approved="yes">
 				<source>Reset</source> <target state="translated">Restablecer</target></trans-unit>
-			<trans-unit id="content.needsConsent.text">
-				<source>A content was hidden because you did not agree to all necessary cookies. In order to see the content, you must agree to the following cookies.</source>
-				<target>Se ocultó el contenido porque no aceptaste todas las cookies necesarias. Para ver el contenido, debe aceptar las siguientes cookies.</target>
+			<trans-unit id="content.needsConsent.description">
+				<source>The content "%s" was hidden because you did not agree to all necessary cookies. In order to see the content, you must agree to the following cookies.</source>
+				<target>El contenido "%s" se ocultó porque no aceptaste todas las cookies necesarias. Para ver el contenido, debe aceptar las siguientes cookies.</target>
 			</trans-unit>
-			<trans-unit id="content.needsConsent.actions">
-				<source>Click <![CDATA[<a href="%s">here</a>]]> to show the content, accepting all required cookies. You can manage all of your settings on <![CDATA[<a href="%s">this page</a>]]>.</source>
-				<target>Haga clic <![CDATA[<a href="%s">aquí</a>]]> para mostrar el contenido, aceptando todas las cookies requeridas. Puede administrar todas sus configuraciones en <![CDATA[<a href="%s">esta página</a>]]>.</target>
+			<trans-unit id="content.needsConsent.link.accept">
+				<source>Show content and accept required cookies</source>
+				<target>Mostrar contenido y aceptar las cookies necesarias</target>
+			</trans-unit>
+			<trans-unit id="content.needsConsent.link.settings">
+				<source>Manage all cookie settings</source>
+				<target>Gestionar toda la configuración de cookies</target>
+			</trans-unit>
+			<trans-unit id="content.needsConsent.cookie.title">
+				<source>%s:</source>
+				<target>%s:</target>
 			</trans-unit>
 		</body>
 	</file>
