Add new properties 'isThirdPartyCookie' and 'thirdPartyHost' to Subject records.

--- a/Resources/Private/Language/en.locallang.xlf
+++ b/Resources/Private/Language/en.locallang.xlf
@@ -13,6 +13,15 @@
 				<source>Lifetime</source> <target state="translated">Lifetime</target></trans-unit>
 			<trans-unit id="eprivacy.subject.lifetime.session" approved="yes">
 				<source>Session</source> <target state="translated">Session</target></trans-unit>
+			<trans-unit id="eprivacy.subject.isThirdPartyCookie">
+				<source>Third-party cookie from %s</source>
+			</trans-unit>
+			<trans-unit id="eprivacy.subject.isThirdPartyCookie.description">
+				<source>This is a so-called third-party cookie that is set by external content. If you withdraw your consent on this website, the actual cookie will remain. In this case, you must delete the cookie manually inside your browser settings.</source>
+			</trans-unit>
+			<trans-unit id="eprivacy.subject.thirdPartyHost">
+				<source>Third-party host</source>
+			</trans-unit>
 			<trans-unit id="eprivacy.update.update" approved="yes">
 				<source>Update settings</source> <target state="translated">Update settings</target></trans-unit>
 			<trans-unit id="eprivacy.update.accept" approved="yes">
@@ -49,8 +58,8 @@
 				<target>Manage all cookie settings</target>
 			</trans-unit>
 			<trans-unit id="content.needsConsent.cookie.title">
-				<source>%s:</source>
-				<target>%s:</target>
+				<source>%s (%s):</source>
+				<target>%s (%s):</target>
 			</trans-unit>
 		</body>
 	</file>
