--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -13,6 +13,17 @@
 				<source>Lifetime</source> <target state="translated">Lebensdauer</target></trans-unit>
 			<trans-unit id="eprivacy.subject.lifetime.session" approved="yes">
 				<source>Session</source> <target state="translated">Session</target></trans-unit>
+			<trans-unit id="eprivacy.subject.isThirdPartyCookie">
+				<source>Third-party cookie from %s</source>
+				<target>Third-Party-Cookie von %s</target>
+			</trans-unit>
+			<trans-unit id="eprivacy.subject.isThirdPartyCookie.description">
+				<source>This is a so-called third-party cookie that is set by external content. If you withdraw your consent on this website, the actual cookie will remain. In this case, you must delete the cookie manually in your browser.</source>
+				<target>Es handelt sich um ein sogenanntes Third-Party-Cookie, das von einem externen Inhalt gesetzt wird. Wenn Sie Ihre gegebene Zustimmung auf dieser Webseite wieder zurücknehmen, bleibt das eigentliche Cookie weiterhin erhalten. Sie müssen in dem Fall das Cookie von Hand in Ihren Browsereinstellungen löschen.</target>
+			</trans-unit>
+			<trans-unit id="eprivacy.subject.thirdPartyHost">
+				<source>Third-party host</source>
+			</trans-unit>
 			<trans-unit id="eprivacy.update.update" approved="yes">
 				<source>Update settings</source> <target state="translated">Einstellungen speichern</target></trans-unit>
 			<trans-unit id="eprivacy.update.accept" approved="yes">
@@ -49,8 +60,8 @@
 				<target>Alle Cookie-Einstellungen verwalten</target>
 			</trans-unit>
 			<trans-unit id="content.needsConsent.cookie.title">
-				<source>%s:</source>
-				<target>%s:</target>
+				<source>%s (%s):</source>
+				<target>%s (%s):</target>
 			</trans-unit>
 		</body>
 	</file>
