--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -57,6 +57,14 @@
                 <source>Type</source> <target state="translated">Typ</target></trans-unit>
             <trans-unit id="tx_tweprivacy_domain_model_subject.mode" approved="yes">
                 <source>Mode</source> <target state="translated">Modus</target></trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.is_third_party_cookie">
+                <source>Is third-party cookie</source>
+                <target>Ist Third-Party Cookie</target>
+            </trans-unit>
+            <trans-unit id="tx_tweprivacy_domain_model_subject.third_party_host">
+                <source>Third-party host</source>
+                <target>Third-party host</target>
+            </trans-unit>
             <trans-unit id="tx_tweprivacy_domain_model_subject.mode.cookie" approved="yes">
                 <source>Cookie</source> <target state="translated">Cookie</target></trans-unit>
             <trans-unit id="tx_tweprivacy_domain_model_subject.mode.set" approved="yes">
