--- a/Resources/Private/Language/es.locallang.xlf
+++ b/Resources/Private/Language/es.locallang.xlf
@@ -48,8 +48,8 @@
 				<target>Gestionar toda la configuración de cookies</target>
 			</trans-unit>
 			<trans-unit id="content.needsConsent.cookie.title">
-				<source>%s:</source>
-				<target>%s:</target>
+				<source>%s (%s):</source>
+				<target>%s (%s):</target>
 			</trans-unit>
 		</body>
 	</file>
